my_nextcloud_apatch/cron-nextcloud-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cron-nextcloud-service
  labels:
    app: my-nextcloud
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 80
  selector:
    app: my-nextcloud
    tier: backend
  type: ClusterIP
  # clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-nextcloud-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: backend
    spec:
      containers:
        - image: nextcloud:25
          name: nextcloud
          command:
            - /cron.sh
          volumeMounts:
            - name: nextcloud-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-pv-claim
