my_nextcloud_apatch/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mariadb-service
  labels:
    app: my-nextcloud
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 3306
  selector:
    app: my-nextcloud
    tier: mariadb
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mariadb-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: mariadb
    spec:
      containers:
        - image: mariadb:10.6
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mariadb
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
