my_nextcloud_apatch/nextcloud-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  labels:
    app: my-nextcloud
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: my-nextcloud
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: backend
    spec:
      containers:
        - image: nextcloud:25
          name: nextcloud
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-persistent-storage
          persistentVolumeClaim:
            claimName: nextcloud-pv-claim
