my_nextcloud_apatch/redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis-service
  labels:
    app: my-nextcloud
  annotations:
    metallb.universe.tf/address-pool: custom-addresspool
spec:
  ports:
    - port: 6379
  selector:
    app: my-nextcloud
    tier: redis
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis-deployment
  labels:
    app: my-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nextcloud
      tier: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-nextcloud
        tier: redis
    spec:
      containers:
        - image: redis:latest
          name: redis
          ports:
            - containerPort: 6379
